k8s/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "nginx-deployment-new"
  labels:
   app: "nginx"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "nginx"
  template:
    metadata:
      labels:
        app: "nginx"
    spec:
      containers:
      - name: "webserver"
        image: "nginx:latest"
        ports:
          - containerPort: 80
