k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service  
  labels:
    app: nginx
spec:
  ports:
  - nodePort: 30500
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: NodePort
